--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
     />
     <link rel="stylesheet" href="./style/style.css" />
     <title>Frontend Mentor | Profile card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
   </head>
   <body>
     <main class="d-flex">
@@ -58,9 +52,11 @@
         </div>
       </section>
     </main>
-     <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Bryan Munguia</a>.
-  </div> 
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Bryan Munguia</a>.
+    </div>
   </body>
 </html>
